--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -27,3 +27,8 @@
         <input type="submit" value="Convert to Mp3"/>
     </form>
 </div>
+
+;
+        res.download(pathToFileURL, fileName, (err) => {
+            console.log(err);
+        });
