download and env vars

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -90,7 +90,7 @@
             </div>
             <input type="text" class="form-control" name="pitch" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
           </div>
-          <input type="submit" class="btn btn-primary mb-2"  value="Convert to Mp3"></button>
+          <input type="submit" class="btn btn-primary mb-2"  value="Convert to Mp3"/>
       </form>
      
     
