--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,6 +27,12 @@
                   <span class="sr-only">(current)</span>
                 </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="gtts-tool.ejs">GTTS-Tool</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="gtts-tool.ejs">ttstest</a>
+          </li>
           
         </ul>
       </div>
@@ -130,6 +136,7 @@
 </div>
 </div>
 </div>
+
 </header>
 
 <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
