--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,7 +75,14 @@
             <option value ="en-AU-Wavenet-C">Australian Female</option>
             <option value="en-GB-Standard-B">British Male</option>
             <option value="en-US-Standard-B">US Male</option>
+            <option value="custom">Custom</option>
           </select>
+        </div>
+        <div class="input-group input-group-sm mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="inputGroup-sizing-sm3">Custom Voice Code</span>
+          </div>
+          <input type="text" class="form-control" name="customVoiceSelect" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
         </div>
     
         <div class="form-group">
