--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,13 @@
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
       <link href="/css/style.css" rel="stylesheet" type="text/css">
-
+      <!-- TinyMce Form-->
+      <script src="https://cdn.tiny.cloud/1/a8cfvag4s7xs1ozn53tp51fausp4h56e4v4gz9zm9gbtr52m/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script></script>
+  <script type="text/javascript">
+  tinymce.init({
+    selector: 'textarea'
+  });
+  </script>
 </head>
 
 <!-- Navigation -->
@@ -135,6 +141,7 @@
           </div>
         </div>
       </div>
+
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
@@ -143,7 +150,6 @@
 </div>
 </div>
 </div>
-
 </header>
 
 <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
