--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,10 @@
       <script src="https://cdn.tiny.cloud/1/a8cfvag4s7xs1ozn53tp51fausp4h56e4v4gz9zm9gbtr52m/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script></script>
   <script type="text/javascript">
   tinymce.init({
-    selector: 'textarea'
+    selector: 'textarea',
+    plugins: 'wordcount',
+    toolbar: 'wordcount'
+    
   });
   </script>
 </head>
