--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
       <link href="/css/style.css" rel="stylesheet" type="text/css">
-      <!-- TinyMce Form-->
+      <!-- TinyMce Form
       <script src="https://cdn.tiny.cloud/1/a8cfvag4s7xs1ozn53tp51fausp4h56e4v4gz9zm9gbtr52m/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script></script>
   <script type="text/javascript">
   tinymce.init({
@@ -17,7 +17,7 @@
     toolbar: 'wordcount'
     
   });
-  </script>
+  </script> -->
 </head>
 
 <!-- Navigation -->
